Changes from V8.1 to V8.2
=========================

Commands

- Added option Global to "Implicit Arguments" and "Arguments Scope" for
  section surviving.
- Added option "Unset Elimination Schemes" to deactivated the automatic
  generation of elimination schemes.

Libraries

- Better computational behavior of some constants (eq_nat_dec and 
  le_lt_dec more efficient, Z_lt_le_dec and Positive_as_OT.compare 
  transparent, ...) [exceptionally source of incompatibilities].
- Boolean operators moved from module Bool to module Datatypes.
- Improvements to NArith (Nminus, Nmin, Nmax), and to QArith (in particular 
  a better power function). 
- In SetoidList, eqlistA now express that two lists have similar elements 
  at the same position, while the predicate previously called eqlistA 
  is now equivlistA (this one only states that the lists contains the same 
  elements, nothing more). 
- Improved FSets/FMaps. In particular FMap now provides an induction principle 
  on maps, and some properties about FSets and fold need less hypothesis. 
  The polymorphic parameter for the fold function is now in Type. 
- Loading FSets/FMap used to open unwanted scopes of integer datatypes 
  (see bug #1347). These scopes may need to be opened manually now.

Language

- Sort of Record/Structure, Inductive and CoInductive defaults to Type
  if omitted
- Record/Structure now usable for defining coinductive types
  (e.g. "Record stream := { hd : nat; tl : stream }.")

Notations and implicit arguments

- New options "Set Maximal Implicit Insertion", "Set Reversible Pattern
  Implicit", "Set Strongly Strict Implicit" and "Set Printing Implicit
  Defensive" for controlling inference and use of implicit arguments.
- New modifier in "Implicit Arguments" to force an implicit argument to
  be maximally inserted.
- Level "constr" moved from 9 to 8.
- Structure/Record now printed as Record (unless option Printing All is set).

Tactic Language
